<resources>
    <string name="app_name">Translate</string>
    <string name="add_phrases_text">Add Phrases</string>
    <string name="display_phrases_text">Display Phrases</string>
    <string name="edit_phrases_text">Edit Phrases</string>
    <string name="language_subscription_text">Language Subscription</string>
    <string name="translate_text">Translate</string>
    <string name="enter_an_english_word_phrase_text">Enter an English Word/ Phrase</string>
    <string name="save_button">Save</string>
    <string name="select_a_word_to_edit_text">Select a Word to Edit</string>
    <string name="edit_text">Edit</string>
    <string name="update_text">Update</string>

    <string-array name="languages_array">
        <item>Arabic</item>
        <item>Bulgarian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>German</item>
        <item>Greek</item>
        <item>Spanish</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Irish</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Croatian</item>
<!--        <item>Indonesian</item>-->
        <item>Italian</item>
        <item>Japanese</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Malay</item>
        <item>Norwegian Bokmal</item>
        <item>Dutch</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Russian</item>
<!--        <item>Slovak</item>-->
        <item>Slovenian</item>
        <item>Swedish</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
    </string-array>
</resources>
